...
            android:paddingStart="16dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp">

            <ImageView
                android:id="@+id/filter_icon"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_filter_list_black_24dp"
                app:tint="#555555" />

            <ImageView
...
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- RecyclerView for Mood Event Cards -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mood_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:clipToPadding="false"
        android:paddingTop="0dp"
        android:paddingBottom="12dp"
...
