...
                android:textSize="36sp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mood Details"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#333333"/>
        </LinearLayout>

        <View
...
